--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 	implementation 'org.postgresql:postgresql:42.7.4'
+
+	implementation 'org.springframework.security:spring-security-crypto:6.4.4'
+
+
 }
 
 tasks.named('test') {
